[package]
name = "ef"
version = "0.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/yuulive/ef"
homepage = "https://magiclen.org/ef"
keywords = ["markdown", "html", "MathJax", "LaTeX", "highlight"]
categories = ["command-line-utilities"]
description = "Ef is a tool for converting a Markdown file to a single HTML file with built-in CSS and JS."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "resources/*"]

[badges.travis-ci]
repository = "magiclen/ef"
branch = "master"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = "2.32.0"
concat-with = "0.2"
terminal_size = "0.1"

lazy-static-include = "3"
html-minifier = "3"
comrak = "0.9"
html-escape = "0.2"
slash-formatter = "3"

[dependencies.path-absolutize]
version = "3"
features = ["lazy_static_cache"]